--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,11 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+/config/database.yml
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
 .idea/
 *.keep
+.rvmrc
